Fix: sass docs loader, lib build configuration

--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -13,5 +13,5 @@
         Button!
     </button>
 </body>
-    <script src="../../node_modules/future/js/index.js"></script>
+    <script src="../../src/index.js"></script>
 </html>
