fix: docs, lib configuration, change structure

--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example</title>
-    <link rel="stylesheet" href="../../node_modules/future/css/future.css">
+    <link rel="stylesheet" href="../../node_modules/salt/lib/css/salt.min.css">
 
 </head>
 <body>
     <h1>Cara penggunaan lib</h1>
-    <button class="ft-button">
+    <button class="ft-button--primary">
         Button!
     </button>
 </body>
-    <script src="../../src/index.js"></script>
+    <script src="../../node_modules/salt/lib/js/salt.min.js"></script>
 </html>
