--- a/examples/lib/index.html
+++ b/examples/lib/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example using salt</title>
+    <title>Example using lib</title>
     
     <!-- root path-->
     <base href="../../node_modules/">
@@ -14,7 +14,7 @@
 
 <body>
     <main class="main">
-        <h1>Example using salt</h1>
+        <h1>Example using lib</h1>
         <button class="ft-button--warn">
             Button Warn
         </button>
