SH for build web component 🔥

--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -12,18 +12,13 @@
 </head>
 
 <body>
-    <app-root></app-root>
+    <!-- <app-root></app-root> -->
     <main class="main">
         <h1>Example using web component</h1>
-        <salt-button value="Button Web Component"></salt-button>
+        <salt-button>Button Web Component</salt-button>
     </main>
 </body>
 
     <!-- script tag should under app root -->
-    <script src="salt/api/webcomponent/runtime-es2015.js"></script>
-    <script src="salt/api/webcomponent/runtime-es5.js" nomodule defer></script>
-    <script src="salt/api/webcomponent/polyfills-es5.js" nomodule defer></script>
-    <script src="salt/api/webcomponent/polyfills-es2015.js"></script>
-    <script src="salt/api/webcomponent/main-es2015.js"></script>
-    <script src="salt/api/webcomponent/main-es5.js" nomodule defer></script>
+    <script src="salt/api/library/button.js"></script>
 </html>
