--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -15,7 +15,7 @@
     <!-- <app-root></app-root> -->
     <main class="main">
         <h1>Example using web component</h1>
-        <salt-button>Button Web Component</salt-button>
+        <salt-button value="Button Web Component"></salt-button>
     </main>
 </body>
 
