--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main">
         <h1>Example using web component</h1>
-        <salt-button value="Button Web Component"></salt-button>
+        <salt-button>Button Web Component</salt-button>
     </main>
 </body>
 
