library: Add single file compile - note: #filesize is only 274kb, this different if we build multiple file 270kb x 2 = 540kb

--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -9,15 +9,17 @@
     
     <!-- root path-->
     <base href="../../node_modules/">
+
 </head>
 
 <body>
     <main class="main">
         <h1>Example using web component</h1>
         <salt-button>Button Web Component</salt-button>
+        <salt-slider></salt-slider>
     </main>
 </body>
 
     <!-- script tag should under app root -->
-    <script src="salt/api/library/button.js"></script>
+    <script src="salt/api/library/library.js"></script>
 </html>
