--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -8,8 +8,7 @@
     <title>Example using web component</title>
     
     <!-- root path-->
-    <base href="../../node_modules/">
-
+    <base href="../../dist/">
 </head>
 
 <body>
